syntax = "proto3";

package com.protobuf.protos;
option java_package = "com.protobuf.protos";
option java_multiple_files = true;
option objc_class_prefix = "GPB";

//{
//  "1": {
//    "5": {
//      "2": {
//        "1": "bytearray(b'BFIlwuuD+M3LUnYUPNqCD4h4vW4oTG6l9EDQRVYoa9WbRvdpDbE+9SOM17b4FbONbIR05MPVAZG8e459PWaPZLQ==')"
//      }
//    }
//  },
//  "2": "164351337",
//  "3": "bytearray(b'fsfsg')",
//  "4": "1",
//  "5": "1"
//}





message ChatMessage{
    DeviceInfo deviceInfo = 1;
    int64 roomRealId = 2;
    bytes textMessage = 3;
    int32 unknown4 = 4;
    int32 unknown5 = 5;

    message DeviceInfo{
        DeviceShumei devicesm = 5;
        message DeviceShumei{
            DeviceId deviceId = 2;
            message DeviceId{
                bytes deviceIdStr = 1;
            }
        }
    }
}