syntax = "proto2";

package com.protobuf.protos;
option java_package = "com.protobuf.protos";
option java_multiple_files = true;
option objc_class_prefix = "GPB";



message EnterChannelRequest{
  optional BaseReq baseReq = 1;
  optional int64 roomId = 2;

  optional unknown_obj3 ub3 = 3;
  optional int64 displayRoomId = 5;
  optional int32 unknown_int7 = 7;

  message BaseReq{

  }

  message unknown_obj3{
    optional int32 unknown_int1 = 1;
  }
}
message EnterChannelResponse{
  optional BaseResp baseResp = 1;
  message BaseResp{
    optional int32 errCode = 1;
    optional bytes errMsg = 2;
  }
}




message LeaveChannelRequest{
  optional BaseReq baseReq = 1;
  optional int64 channelId = 2;
  message BaseReq{

  }
}
message LeaveChannelResponse{
  optional BaseResp baseResp = 1;
  message BaseResp{
    optional int32 errCode = 1;
    optional bytes errMsg = 2;
  }
}
