syntax = "proto2";

package com.protobuf.protos;
option java_package = "com.protobuf.protos";
option java_multiple_files = true;
option objc_class_prefix = "GPB";




//{
//  "1": {
//    "1": "0",
//    "2": {},
//    "7": "bytearray(b'86dc98bd882a82cf1b08965a25a9cb92')"
//  },
//  "2": {
//    "2": "296475024",
//    "3": "bytearray(b'iceway')",
//    "4": "bytearray(b'13580590620')",
//    "5": "0",
//    "6": "0",
//    "7": "bytearray(b'40f1f90bd2925a259052ae01a8897cef')",
//    "9": "0",
//    "10": "1",
//    "11": {},
//    "12": "bytearray(b'tt315639854')",
//    "13": {},
//    "14": {},
//    "15": "0",
//    "16": "1",
//    "17": "bytearray(b'28053207215238')",
//    "18": "0",
//    "19": "bytearray(b'315639854')",
//    "20": "0",
//    "21": "bytearray(b'i8m3lz89N5AGghEJC5n_cFIZ9QamW4U28Oxgdj7r:z3a-qeJVNuE9kAVsn25xXJx673g=:eyJzY29wZSI6ImdhLWFsYnVtIiwiZGVhZGxpbmUiOjE2NjkwMzgyNzJ9')",
//    "22": "30",
//    "23": "1",
//    "24": "1",
//    "26": "bytearray(b'8GDCVU')",
//    "27": "0",
//    "28": "bytearray(b'1c6d761c19754e26f6599936298ae0ed')",
//    "29": "1669037672077",
//    "30": "0",
//    "31": "0",
//    "32": "0",
//    "33": "bytearray(b'iceway')",
//    "35": "1667717039",
//    "36": "0",
//    "37": "0",
//    "38": "bytearray(b'eyJhbGciOiAiSFM1MTIiLCAidHlwIjogIkpXUyJ9.eyJleHAiOiAxNjY5MDM4NTcyLCAiaWF0IjogMTY2OTAzNzY3MiwgImlzcyI6ICI1MnR0LmNvbSIsICJzZXNzIjogIiIsICJzdWIiOiAidHQzMTU2Mzk4NTQiLCAidGVybSI6IDExMTQxMTIsICJ0eXAiOiAxLCAidWlkIjogMjk2NDc1MDI0fQ.ZxNfkK6BCwnIlSS4DBLKzUjqhTcHPE7pM-tUIDKo2scu5t3_HYuyT53vt0yc_skbJtCe0l4_wKfxcqh9B5e03w')",
//    "39": "bytearray(b'59.34.190.234')",
//    "40": "0",
//    "42": {},
//    "43": "0",
//    "44": "bytearray(b'eyJhbGciOiJFUzI1NiIsImtpZCI6IkVqV1oyc29lNkk0QndOS2FzMEZscDQ0M2NsMlFOTmpOSXBlclFVQS1zbUUifQ.eyJjbGllbnRfdHlwZSI6MCwiZGV2aWNlX2lkIjoiRjdiV2N4N1U4MHJNRFEyTTNDQXJpQT09IiwiZXhwIjoxNjY5MDQ0ODcyLCJleHRyYSI6eyJjbGllbnRfaXAiOiI1OS4zNC4xOTAuMjM0In0sImlhdCI6MTY2OTAzNzY3MiwiaXNzIjoiaHR0cHM6Ly9hcGkuNTJ0dC5jb20iLCJqdGkiOiIzYjJ5NTZnYm96Nm8iLCJzY29wZXMiOm51bGwsInN1YiI6IjI5NjQ3NTAyNCIsInRlcm1pbmFsX3R5cGUiOjExMTQxMTJ9.5xOXBowfOQ7_lyg604VJ5NKfGuiW2h_zF1uXfR8rAF15fE1wXuW85iDYSySAIbh57XYxHim6rli6iuWFpeS5cQ')",
//    "45": {
//      "1": {
//        "1": "bytearray(b'apiv2.52tt.com:443')",
//        "2": {
//          "1": "1",
//          "2": {}
//        }
//      },
//      "2": "1669044872",
//      "3": {}
//    }
//  },
//  "3": "3",
//  "4": "1",
//  "5": "bytearray(b'555f6144739d62894deff36b0d0b62ec')"
//}
message LoginResp{
	optional BaseResp baseResp = 1;
	optional AuthInfo authInfo = 2;
	optional int32 loginType = 3;//3 = Auto Login
	optional int32 accType = 4;

	message BaseResp{
		optional int32 errCode = 1;
		optional bytes errMsg = 2;
	}
	message AuthInfo{
		optional int32 userId = 2;
		optional bytes nickName = 3;
		optional bytes acc = 4;
		optional bytes sessionKey = 7;
		optional bytes account = 12;
		optional int32 guildid = 15;
		optional bytes loginkey = 17;
		optional bytes AuthToken = 28;
		optional int64 timestamp = 29;
		optional bool simplePwd = 40;
		optional bytes ttUnionToken = 44;
	}
}


//{
//  "1": {
//    "3": {},
//    "5": {
//      "16": {}
//    },
//    "6": {}
//  },
//  "2": "bytearray(b'13580590620')",
//  "3": "bytearray(b'555f6144739d62894deff36b0d0b62ec')",
//  "4": "3",
//  "5": "1",
//  "11": "bytearray(b'10')",
//  "12": "bytearray(b'Android')",
//  "13": "bytearray(b'AOSP on crosshatch')",
//  "19": "bytearray(b'official')",
//  "21": "bytearray(b'official')",
//  "22": {
//    "1": {},
//    "2": {},
//    "13": {
//      "4": "bytearray(b'Mozilla/5.0 (Linux; Android 10; AOSP on crosshatch Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/74.0.3729.186 Mobile Safari/537.36 TTVersion/6.10.1 TTFrom/tt')",
//      "6": "bytearray(b'fbddc0a64a19b097')"
//    }
//  }
//}
message AutoLogin{
	optional BaseReq baseReq = 1;
	optional bytes userName = 2;
	optional bytes sessionKey = 3;
	optional int32 loginType = 4;//3 = Auto Login
	optional int32 acc_type = 5;//1
	optional bytes systemVer = 11;
	optional bytes system = 12;
	optional bytes model = 13;
	optional bytes itChannel = 19;
	optional bytes dis_chn = 21;
	optional ExtraInfo extraInfo = 22;

	message BaseReq{
		optional Unkobj3 uobj3 = 3;
		optional Unkobj5 uobj5 = 5;
		optional Unkobj6 uobj6 = 6;
		message Unkobj3{
		}
		message Unkobj5{
			optional Unkobj16 uobj16 = 16;
			message Unkobj16{
			}
		}
		message Unkobj6{
		}
	}

	message ExtraInfo{
		optional Unkobj1 unkobj1 = 1;
		optional LotteryInfo lotteryInfo = 2;
		optional ExtraDeviceIds extraDeviceIds = 13;

		message Unkobj1{
		}
		message LotteryInfo{
		}
		message ExtraDeviceIds{
			optional bytes userAgent = 4;
			optional bytes androidId = 6;
		}
	}
}

//{
//  "1": {},
//  "4": "1",
//  "5": "bytearray(b'6.10.1')",
//  "6": "16243",
//  "7": "bytearray(b'official')"
//}
message CheckSyncKey{
	optional Unknown1 unkobj1 = 1;
	optional int32 unknown4 = 4;
	optional bytes version = 5;
	optional int32 versionCode = 6;
	optional bytes official = 7;
	message Unknown1{

	}
}


//{
//  "1": {
//    "1": "0",
//    "2": {},
//    "7": "bytearray(b'04c1aa3f836b656ceb887ef5ed13b31e')"
//  },
//  "2": [
//    {
//      "1": "11",
//      "2": "37"
//    },
//    {
//      "1": "2",
//      "2": "6"
//    },
//    {
//      "1": "6",
//      "2": "10"
//    },
//    {
//      "1": "15",
//      "2": "2"
//    },
//    {
//      "1": "16",
//      "2": "0"
//    },
//    {
//      "1": "7",
//      "2": "1667217203"
//    },
//    {
//      "1": "8",
//      "2": "1430668502"
//    },
//    {
//      "1": "10",
//      "2": "0"
//    },
//    {
//      "1": "14",
//      "2": "1669034637"
//    },
//    {
//      "1": "15",
//      "2": "2"
//    }
//  ],
//  "3": "0",
//  "4": "bytearray(b'i8m3lz89N5AGghEJC5n_cFIZ9QamW4U28Oxgdj7r:jMXgE2cYouAQ5AuA5EhVgEMlbN8=:eyJzY29wZSI6ImdhLWFsYnVtIiwiZGVhZGxpbmUiOjE2NjkwOTE3MjV9')",
//  "6": "bytearray(b'6.11.0_16267')",
//  "7": "1",
//  "8": "1",
//  "9": "1590656595",
//  "10": "1669091125",
//  "12": "15",
//  "16": "16267",
//  "17": "bytearray(b'i8m3lz89N5AGghEJC5n_cFIZ9QamW4U28Oxgdj7r:nUyMsom4RnRofKJbniB5Iy6_wMk=:eyJzY29wZSI6InR0LWNyYXNoLWxvZ3MtYW5kcm9pZCIsImRlYWRsaW5lIjoxNjY5MDkxNzI1fQ==')",
//  "18": "bytearray(b'i8m3lz89N5AGghEJC5n_cFIZ9QamW4U28Oxgdj7r:jMXgE2cYouAQ5AuA5EhVgEMlbN8=:eyJzY29wZSI6ImdhLWFsYnVtIiwiZGVhZGxpbmUiOjE2NjkwOTE3MjV9')",
//  "19": "bytearray(b'eyJhbGciOiAiSFM1MTIiLCAidHlwIjogIkpXUyJ9.eyJleHAiOiAxNjY5MDkyMDI1LCAiaWF0IjogMTY2OTA5MTEyNSwgImlzcyI6ICI1MnR0LmNvbSIsICJzZXNzIjogIiIsICJzdWIiOiAidHQzMTU2Mzk4NTQiLCAidGVybSI6IDExMTQxMTIsICJ0eXAiOiAxLCAidWlkIjogMjk2NDc1MDI0fQ.0e7Y2pxhY-EQlt2mY5kbT7_b4k_z-pNUNOBXxoAwjxq-Us6PdQkO5DVZ5D5nGegpFAzoZOaahNOZ32LUtjJ54w')",
//  "20": {
//    "1": {
//      "1": "bytearray(b'apiv2.52tt.com:443')",
//      "2": {
//        "1": "1",
//        "2": {}
//      }
//    },
//    "2": "1669098325",
//    "3": {}
//  }
//}

message CheckSyncKeyResp{
	optional BaseResp baseResp = 1;
	message BaseResp{
		optional int32 errCode = 1;
		optional bytes errMsg = 2;
	}
	repeated SyncKeyList syncKeyList = 2;
	optional int32 guildId = 3;//guildId
	optional bytes token = 4;
	optional bytes version = 6;
	optional int32 gameCircleCfgUpdate = 7;
	optional int32 rootAlertCfgUpdate = 8;
	optional int32 gCfgUpdate = 9;
	optional int32 srvTimeSync = 10;
	optional int32 versionCode = 16;//16267
	optional bytes crashLogToken = 17;
	optional bytes unknownToken = 18;
	optional bytes webSecureToken = 19;
	optional ExpireAt expireAt = 20;


	message SyncKeyList{
		optional int32 syncType = 1;
		optional int32 key = 2;
	}

	message ExpireAt{
		optional int32 expireAt = 2;
	}
}
